# EndToEndFabric

./: .gitignore  PLAN.md  README.md  deploy-to-fabric.ps1  generate.ps1  generate.py  pyproject.toml
.github/agents/: data-engineer.agent.md  deployer.agent.md  forecaster.agent.md  htap-engineer.agent.md  industry-designer.agent.md  orchestrator.agent.md  report-builder.agent.md  semantic-model.agent.md  shared.instructions.md  tester.agent.md
.github/workflows/: ci-tests.yml  generate-demo.yml
core/: __init__.py  agent_generator.py  config_loader.py  csv_generator.py  dataflow_generator.py  deploy_generator.py  forecast_generator.py  htap_generator.py  notebook_generator.py  pester_generator.py  pipeline_generator.py  planning_generator.py  report_generator.py  template_engine.py  tmdl_generator.py  writeback_generator.py
core/schemas/: industry_schema.json  sample_data_schema.json  semantic_model_schema.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  generate_diagrams.py
industries/contoso-energy/: data-agent.json  forecast-config.json  htap-config.json  industry.json  planning-config.json  reports.json  sample-data.json  semantic-model.json  web-enrichment.json  writeback-config.json
industries/fabrikam-manufacturing/: data-agent.json  forecast-config.json  htap-config.json  industry.json  planning-config.json  reports.json  sample-data.json  semantic-model.json  web-enrichment.json  writeback-config.json
industries/horizon-books/: data-agent.json  htap-config.json  industry.json  planning-config.json  reports.json  sample-data.json  semantic-model.json  (+2 more)
(+46 files in other folders)
