[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fabric-endtoend"
version = "0.1.0"
description = "Multi-industry end-to-end Fabric demo generator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Fabric E2E Team"}
]

[project.scripts]
fabric-e2e = "generate:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["core"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
